# anotherengine

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
shaders/: main.frag  main.vert
src/: Engine.cpp  Engine.h
src/gl/: buffer.cpp  buffer.h  shader.cpp  shader.h
src/scene/: Scene.cpp  Scene.h
src/util/: Timer.cpp  Timer.h
src/window/: Window.cpp  Window.h
